# FinalProject

./: CMakeLists.txt  README.md
MyParkour/: CMakeLists.txt
MyParkour/data/: data.json
MyParkour/include/: common.h  game.h  main.h  menu.h
MyParkour/include/game/: game.h
MyParkour/include/utils/: audio.h  display.h  input.h  widget.h
MyParkour/src/: CMakeLists.txt  cJSON.c  game.c  main.c  menu.c
MyParkour/src/game/: game.c
MyParkour/src/utils/: audio.c  cJSON.c  display.c  input.c  widget.c
MyParkour/test/: CMakeLists.txt  MyCJsonTest.c  SDLTest.c  new.c  test.c
